# rpiui

./: Cargo.toml  dependencies.sh  rotate.sh
src/: main.rs
ui/: AnswerButton.slint  AppButton.slint  Logo.slint  app-window.slint  app-window1.slint  buttons.slint  introquotepage.slint  preintro.slint  trivia1.slint  trivia2.slint  trivia_screen.slint  welcome.slint
