[package]
name = "rpiui"
version = "0.1.0"
edition = "2024"


[dependencies]
slint = {version="1.13", features = ["backend-linuxkms", "renderer-software"]}
pcsc = "2.4"
regex = "1.8.1" 
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["json","blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"

[build-dependencies]
slint-build = "1.13"
